--- a/cadastroitens.html
+++ b/cadastroitens.html
@@ -20,7 +20,9 @@
                 <br>
                 <p>Resumo</p>
                 <textarea name="descrição" id="idescriçao" cols="40" rows="20"></textarea>
+                <form action="catalogo.html">
                 <input type="submit" value="Adicionar">
+            </form>
             </div>
         </main>
         <section>
