--- a/catalogo.html
+++ b/catalogo.html
@@ -47,12 +47,15 @@
                         <img src="imagens/Binlixo.png" alt="lixeira">
                     </div>
                 </div>
-
+                <form action="cadastroitens.html">
                   <input type="submit"  value="Casdastrar itens">
+                </form>
 
             </main>
             
-        <footer>R</footer>
+        <footer>R
+           
+        </footer>
     </div>
 </body>
 </html>
