--- a/login.html
+++ b/login.html
@@ -14,18 +14,20 @@
     <main>
         <div class="caixa">
             <h1>Entrar</h1>
-            <form>
+            <form action="catalogo.html">
                 <label for="">E-mail</label>
                 <input type="email">
                 <label for="">Senha</label>
                 <input type="password">
                 <input type="submit" value="ENTRAR">
+    
             </form>
             </div>
+            
     </main>
 
     <section>
-    S
+   
     </section>
     </div>
 </body>
