--- a/telainicial.html
+++ b/telainicial.html
@@ -11,7 +11,7 @@
     
     <div class="container">
         <header>
-            <img src="imagens/logo principallogo.png">
+            <img src="./imagens/logo principallogo.png">
             <a href="login.html">Entrar</a>
             <a href="cadastro.html">Cadastra-se</a>
           
