--- a/cadastro.html
+++ b/cadastro.html
@@ -17,17 +17,17 @@
           </svg>
         <div class="caixa">
             <h1>Cadastro</h1>
-            <form action="login.html">
+            <div class="mensagem"></div>
+            <form id="formulario">
                 <label for="">Nome</label>
-                <input type="text">
+                <input type="text" id="nome">
                 <label for="">E-mail</label>
-                <input type="email">
+                <input type="email" id="email">
                 <label for="">Senha</label>
-                <input type="password">
+                <input type="password" id="senha">
                 <label for="">Confirme a Senha</label>
-                <input type="password">
+                <input type="password" id="csenha">
                 <input type="submit" value="Cadastrar">
-                
             </form>
             
             </div>
@@ -35,9 +35,9 @@
     </main>
 
     <section>
-    S 
     </section>
 
     </div>
+    <script src="cadastro.js"></script>
 </body>
 </html>
