--- a/login.html
+++ b/login.html
@@ -14,11 +14,12 @@
     <main>
         <div class="caixa">
             <h1>Entrar</h1>
-            <form action="catalogo.html">
+            <div class="mensagem"></div>
+            <form id="formulario">
                 <label for="">E-mail</label>
-                <input type="email">
+                <input type="email" id="email">
                 <label for="">Senha</label>
-                <input type="password">
+                <input type="password" id="senha">
                 <input type="submit" value="ENTRAR">
     
             </form>
@@ -30,5 +31,6 @@
    
     </section>
     </div>
+    <script src="login.js"></script>
 </body>
 </html>
