--- a/cadastroitens.html
+++ b/cadastroitens.html
@@ -32,7 +32,9 @@
           
         </section>
 
-        <footer> R </footer>
+        <footer> R
+            <script src="cadastroitens.js"></script>
+         </footer>
 
     </div>
 </body>
