--- a/cadastroitens.html
+++ b/cadastroitens.html
@@ -14,14 +14,15 @@
         </header>
         <main>
             <div class="inscricao">
+                <form action="catalogo.html">
                 <label for="nome">Nome da Obra</label>
                 <input type="text" id="nome">
                 <br>
                 <br>
                 <p>Resumo</p>
-                <textarea name="descrição" id="idescriçao" cols="40" rows="20"></textarea>
-                <form action="catalogo.html">
-                <input type="submit" value="Cadastrar" class="btncadastrar">
+                <textarea name="descrição" id="idescricao" cols="40" rows="20"></textarea>
+                
+                <input type="submit" value="Cadastrar" id="btn" class="btncadastrar">
             </form>
             </div>
         </main>
