--- a/catalogo.html
+++ b/catalogo.html
@@ -23,7 +23,7 @@
 
                 
                 <form action="cadastroitens.html">
-                  <input type="submit"  value="Casdastrar itens">
+                  <input type="submit" id="btn" value="Casdastrar itens">
                 </form>
 
             </main>
